syntax = "proto3";

import "types/tx/tx.proto";

option go_package = "gitlab.com/ConsenSys/client/fr/core-stack/orchestrate.git/types/envelope";

package envelope;

message Envelope {
    oneof body {
        tx.TxRequest tx_request = 1;
        tx.TxResponse tx_response = 2;
    }
}
